cmake_minimum_required(VERSION 3.5)
project (kotel)
set (CMAKE_CXX_STANDARD 17)
if (MSVC)
	add_compile_options(/W4 /EHsc /DNOMINMAX    )
	set(STANDARD_LIBRARIES "")
else()
	add_compile_options(-Wall -Wextra -Wpedantic)
	set(STANDARD_LIBRARIES "pthread")
endif()
find_package(Git)
if(GIT_EXECUTABLE)
	execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif()



set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	set(CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "Default path to install" FORCE)
endif()
include_directories(AFTER ${CMAKE_CURRENT_LIST_DIR}/src/emul)
include_directories(AFTER ${CMAKE_CURRENT_LIST_DIR}/src/libraries/r4eeprom)
include_directories(AFTER ${CMAKE_CURRENT_LIST_DIR}/src/libraries/SimpleDallasTemp)
include_directories(AFTER ${CMAKE_CURRENT_LIST_DIR}/src/libraries/DotMatrix)
include_directories(AFTER ${CMAKE_CURRENT_LIST_DIR}/src/libraries/Matrix_MAX7219)
include_directories(AFTER ${CMAKE_CURRENT_LIST_DIR}/src/libraries/Keyboard1W)

add_subdirectory("src/build_web")
add_subdirectory("src/www")

include(library.cmake)
enable_testing()
add_subdirectory("src/tests")
add_subdirectory("src/emul")
add_subdirectory("src/libraries/OneWire/test")
add_subdirectory("src/libraries/r4eeprom/test")
